[package]
name = "frisco"
version = "0.1.0"
authors = ["steabert <steabert@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-parser = "0.8.0"
httparse = "1.3.4"
pnet = "0.23.0"
ipnetwork = "0.15.1"